--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,21 @@
 Package: MethylAidData
 Type: Package
-Title: MethylAid-summarized data on 2800 Illumina 450k array samples
-Version: 1.11.1
-Date: 2018-03-18
-Author: Maarten van Iterson, Elmar. Tobi, Roderick Slieker, Wouter den
-        Hollander, Rene Luijk and Bas Heijmans
-Maintainer: M. van Iterson <m.van_iterson@lumc.nl>
+Title: MethylAid-summarized data for 2800 Illumina 450k array samples
+       and 2620 EPIC array samples
+Version: 1.11.2
+Date: 2018-03-24
+Author: Davy Cats, Tyler J. Gorrie-Stone, Bastiaan T. Heijmans, John
+	W. Holloway, BIOS Consortium, Maarten van Iterson, Faisal I. Rezwam,
+	Leonard Schalkwyk
+Maintainer: M. van Iterson <mviterson@gmail.com>
 Description: A data package containing summarized Illumina 450k array
-        data on 2800 samples. The data can be use as a background data
-        set in the interactive application.
+	     data on 2800 samples and summarized EPIC data for 2620
+	     samples. The data can be use as a background data set in the
+	     interactive application.
 License: GPL (>= 2)
 VignetteBuilder: knitr
-biocViews: ExperimentData
+biocViews: ExperimentData, TechnologyData, MicroarrayData, MethylationArrayData
 Depends: MethylAid, R (>= 3.2)
-Suggests: BiocParallel, BiocStyle, knitr
+Suggests: BiocParallel, BiocStyle, knitr, minfiData, minfiDataEPIC
 NeedsCompilation: no
+RoxygenNote: 6.0.1
